# Database-project

./: .env.template  .gitignore  Dockerfile  README.md  check_and_populate_db.py  create_fake_data.py  main.py  pyproject.toml  simple_fake_data.py
src/database/: __init__.py  db.py  managers.py  models.py  queryManager.py  views.py
src/router/: __init__.py  auth.py  public.py  publicauth.py  secured.py
