[project]
name = "database-project"
version = "0.1.0"
description = "Back end of the database course project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bpython>=0.25",
    "cryptography>=42.0.0",
    "fastapi[standard]>=0.116.1",
    "pony>=0.7.19",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.1.1",
    "faker>=30.8.0",
]
